--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,17 @@
 @import '@fontsource/fira-mono';
 
 @tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+    font-family: 'Nasalization';
+    src: url('/fonts/nasalization.otf') format('opentype'),
+         url('/fonts/nasalization.woff') format('woff'),
+         url('/fonts/nasalization.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
 
 :root {
 	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
