--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
 /* Write your global styles here, in PostCSS syntax */
 
-@import '@fontsource/fira-mono';
+@import '@fontsource/roboto';
 
 @tailwind base;
 @tailwind components;
@@ -12,43 +12,6 @@
          url('/fonts/nasalization.woff') format('woff'),
          url('/fonts/nasalization.woff2') format('woff2');
     font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Roboto';
-    src: url('/fonts/Roboto-Black.ttf') format('truetype');
-    font-weight: 800;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto';
-    src: url('/fonts/Roboto-Bold.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto';
-    src: url('/fonts/Roboto-Medium.ttf') format('truetype');
-    font-weight: 600;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto';
-    src: url('/fonts/Roboto-Regular.ttf') format('truetype');
-    font-weight: 500;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto';
-    src: url('/fonts/Roboto-Light.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto';
-    src: url('/fonts/Roboto-Thin.ttf') format('truetype');
-    font-weight: 300;
     font-style: normal;
 }
 
