--- a/src/app.css
+++ b/src/app.css
@@ -3,8 +3,6 @@
 @import '@fontsource/roboto';
 
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @font-face {
     font-family: 'Nasalization';
@@ -20,7 +18,7 @@
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
 	--pure-white: #ffffff;
-	--primary-color: #b9c6d2;
+	--primary-color: #263c69;
 	--secondary-color: #d0dde9;
 	--tertiary-color: #edf0f8;
 	--accent-color: #ff3e00;
@@ -35,12 +33,12 @@ body {
 	min-height: 100vh;
 	margin: 0;
 	background-color: var(--primary-color);
-	background: linear-gradient(
-		180deg,
-		var(--primary-color) 0%,
-		var(--secondary-color) 10.45%,
-		var(--tertiary-color) 41.35%
-	);
+	/* background: linear-gradient( */
+	/* 	180deg, */
+	/* 	var(--primary-color) 0%, */
+	/* 	var(--secondary-color) 10.45%, */
+	/* 	var(--tertiary-color) 41.35% */
+	/* ); */
 }
 
 body::before {
@@ -127,5 +125,4 @@ button:focus:not(:focus-visible) {
 }
 
 @tailwind components;
-
 @tailwind utilities;
